Multiple event types per topic